<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"/>

    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView4"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="@android:color/white" android:textSize="18sp" android:fontFamily="@font/montserrat"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
    >
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton5"
                android:textOn="@string/mens" android:textOff="@string/mens"
                android:textColor="@android:color/white"
                android:background="@drawable/swoosh_toggle" android:fontFamily="@font/montserrat"
        />
        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:textOff="@string/womens" android:textOn="@string/womens"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="208dp"
                tools:layout_editor_absoluteX="162dp" android:id="@+id/toggleButton2" android:textOn="@string/co_ed"
                android:textOff="@string/co_ed"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button3" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:background="@drawable/swoosh_button"
            android:textSize="16sp"/>

</android.support.constraint.ConstraintLayout>