<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/app_name" app:layout_constraintHorizontal_bias="0.5"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:scaleType="fitCenter" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/imageView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/app_name"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:id="@+id/textView" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:textSize="46sp" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:textSize="21sp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="bold"/>
    <TextView
            android:text="Find a team in your city and dominate the league"
            android:layout_width="246dp"
            android:layout_height="44dp"
            android:id="@+id/textView3" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:singleLine="false" android:textAlignment="center"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:background="@drawable/swoosh_button"
            android:textSize="16sp"/>
</android.support.constraint.ConstraintLayout>